--- a/demo/demo.cabal
+++ b/demo/demo.cabal
@@ -1,6 +1,6 @@
 Name: demo
 Version: 0.0
-Build-Depends: base, bsd-sysctl
+Build-Depends: base >= 3 && < 5, bsd-sysctl
 Build-Type: Simple
 Executable: demo
 Main-is: Demo.hs
