--- a/bsd-sysctl.cabal
+++ b/bsd-sysctl.cabal
@@ -16,7 +16,8 @@ Description:
 Build-Type:	Custom
 Cabal-Version:	>= 1.2
 Tested-with:	GHC ==6.10, GHC ==6.12
-Data-Files:	demo/Demo.hsc demo/demo.cabal demo/demo.output
+Extra-Source-Files:
+  demo/Demo.hsc demo/demo.cabal demo/demo.output demo/Setup.hs
 
 Library
   Build-Depends:	base >= 3 && < 5
