--- a/bsd-sysctl.cabal
+++ b/bsd-sysctl.cabal
@@ -1,32 +1,38 @@
-Name:		bsd-sysctl
-Version:	1.0.7
-License-File:	LICENSE
-License:	BSD3
-Author:		Maxime Henrion
-Copyright:	2009-2010, Maxime Henrion
-Maintainer:	Maxime Henrion <mhenrion@gmail.com>
-Bug-Reports:	http://bitbucket.org/mux/bsd-sysctl/issues/
-Category:	System, BSD
-Synopsis:	Access to the BSD sysctl(3) interface
-Description:
+name:                bsd-sysctl
+version:             1.0.7
+license-File:        LICENSE
+license:             BSD3
+author:              Maxime Henrion
+copyright:           2009-2010, Maxime Henrion
+maintainer:          Alexei Pastuchov <info@maximka.de>
+bug-reports:         https://github.com:p-alik/bsd-sysctl/issues
+homepage:            https://github.com:p-alik/bsd-sysctl
+category:            System, BSD
+synopsis:            Access to the BSD sysctl(3) interface
+description:
   This module provides efficient access to the BSD sysctl(3) interface via the
   Haskell FFI.
   .
   It allows to read and write both basic sysctl types, as well as complex opaque
   types (typically C structures) described via Storable instances.
-Build-Type:	Custom
-Cabal-Version:	>= 1.6
-Tested-with:	GHC ==6.10, GHC ==6.12
-Extra-Source-Files:
+build-type:          Custom
+cabal-version:       >=1.10
+tested-with:         GHC ==6.10
+                   , GHC ==6.12
+extra-source-files:
   demo/Demo.hsc demo/demo.cabal demo/demo.output demo/Setup.hs
 
-Source-Repository head
-  Type:			mercurial
-  Location:		http://bitbucket.org/mux/bsd-sysctl/
+library
+  build-depends:       base >= 4.7 && < 5
+  exposed-modules:     System.BSD.Sysctl
+  extensions:          ForeignFunctionInterface
+                     , ScopedTypeVariables
+                     , TypeSynonymInstances
+                     , FlexibleInstances
+  ghc-options:         -Wall -O2 -funbox-strict-fields
+  default-language:    Haskell2010
 
-Library
-  Build-Depends:	base >= 3 && < 5
-  Exposed-Modules:	System.BSD.Sysctl
-  Extensions:		ForeignFunctionInterface, ScopedTypeVariables,
-                        TypeSynonymInstances, FlexibleInstances
-  GHC-Options:		-Wall -O2 -funbox-strict-fields
+source-repository head
+  type:     git
+  location: https://github.com:p-alik/bsd-sysctl
+
