replace build type by Simple.
because the warning:
uses a custom Cabal build, but does not use a custom-setup stanza
Using the explicit setup deps approach based on configuration
Strongly recommend fixing the package's cabal file

Build & test with Simple works fine als

--- a/bsd-sysctl.cabal
+++ b/bsd-sysctl.cabal
@@ -15,7 +15,7 @@ description:
   .
   It allows to read and write both basic sysctl types, as well as complex opaque
   types (typically C structures) described via Storable instances.
-build-type:          Custom
+build-type:          Simple
 cabal-version:       >=1.10
 tested-with:         GHC ==6.10
                    , GHC ==6.12
