reformat extra-source-files

--- a/bsd-sysctl.cabal
+++ b/bsd-sysctl.cabal
@@ -23,7 +23,9 @@ tested-with:         GHC ==6.10
                    , GHC ==7.10.3
                    , GHC ==8.0.2
 extra-source-files:
-  demo/Demo.hsc demo/demo.cabal demo/demo.output demo/Setup.hs
+  demo/Demo.hsc
+  demo/Setup.hs
+  demo/demo.cabal
 
 library
   build-depends:       base >= 4.7 && < 5
